5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1585_1571.log
== TEST (2019-03-26 11:09:06) 
-- CODE:
texto = print(texto.upper(Guido van Rossum criou o Python))
-- ERROR:
File "XXXX", line 1
    texto = print(texto.upper(Guido van Rossum criou o Python))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:09:20) 
-- CODE:
print(texto.upper(Guido van Rossum criou o Python))
-- ERROR:
File "XXXX", line 1
    print(texto.upper(Guido van Rossum criou o Python))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:13) 
-- CODE:
texto = Guido van Rossum criou o Python
print(texto.upper())
-- ERROR:
File "XXXX", line 1
    texto = Guido van Rossum criou o Python
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:34) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:10:42) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- EXECUTION TIME:
0.139798
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
GUIDO VAN ROSSUM CRIOU O PYTHON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:53) 
-- CODE:
texto = "Guido van Rossum criou o Python"
print(texto.upper())
-- OUTPUT:
GUIDO VAN ROSSUM CRIOU O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:03) 
-- CODE:
texto = input()
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:13:17) 
-- CODE:
texto = input()
print(texto.upper())
-- EXECUTION TIME:
0.196407
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
